created advanced filter and search field

--- a/app/views/power_generators/index.html.erb
+++ b/app/views/power_generators/index.html.erb
@@ -16,32 +16,56 @@
       </div>
     </div>
 
-    <%= form_tag do %>
-      <div class="simple-form">
+    <div class="simple-form">
+      <%= form_tag search_power_generators_path, method: :post, remote: true do %>
         <div class="simple-form__input">
-          <input class="form-control form-control-lg" type="text" placeholder="o que procura?">
+          <%= text_field_tag :text_search, @text_search, placeholder: 'o que procura?' %>
         </div>
-        <div class="simple-form__btn">
-          <button type="submit" class="btn btn-outline-primary btn-lg">Pesquisar</button>
+        <div>
+          <%= button_to :Pesquisar, nil, class: 'simple-form__btn' %>
         </div>
-      </div>
+      <% end %>
+    </div>
 
-      <div class="advanced-form" style="display:none;">
-        Entradas do usuário para pesquisar uma coleção de geradores de energia com base nas recomendações fornecidas e melhor custo de frete.
-      </div>
-    <% end %>
+    <div class="advanced-form" style="display:none;">
+      <%= form_tag search_power_generators_path, method: :post, remote: true do %>
+        <div class="advanced-form__input">
+          <%= label_tag 'Preço Max.' %> <br>
+          <%= select_tag :price_max, options_for_select([['Qualquer Valor', 999999999], ['até R$ 5.000,00', 5000],['até R$ 15.000,00', 15000], ['até R$ 25.000,00', 25000], ['até R$ 50.000,00', 50000], ['até R$ 100.000,00', 100000]]) %>
+        </div>
+        <div class="advanced-form__input">
+          <%= label_tag 'Peso Max.' %> <br>
+          <%= select_tag :weight_max, options_for_select([['Qualquer Peso', 999999999], ['até 100Kg', 100],['até 130Kg', 130], ['até 150Kg', 150], ['até 200Kg', 200]]) %>
+        </div>
+        <div class="advanced-form__input">
+          <%= label_tag 'Fabricação' %> <br>
+          <%= select_tag :manufacturer, options_for_select([['Todas', 'all']] + PowerGenerator.all.collect{|pg| pg.manufacturer}.uniq) %>
+        </div>
+        <div class="advanced-form__input">
+          <%= label_tag 'Tipo de Estrutura' %> <br>
+          <%= select_tag :structure_type, options_for_select([['Todas', 'all']] + PowerGenerator.all.collect{|pg| pg.structure_type}.uniq) %>
+        </div>
+        <%= button_to :Pesquisar, nil, class: 'form-btn' %>
+      <% end %>
+     <!-- Entradas do usuário para pesquisar uma coleção de geradores de energia com base nas recomendações fornecidas e melhor custo de frete. -->
+    </div>
+      
+    
   </div>
-
-  <div class="container" >
-    <% @power_generators.each do |power_generator| %>
-      <div class="box card power_generator-card">
-        <%= image_tag power_generator.image_url, class: 'power_generator-card__img' %>
-        <div class="power_generator-card__body">
-          <h2><%= power_generator.name.upcase %></h2>
-          <p class="power_generator-card__price"><%= number_to_currency(power_generator.price, unit: "R$ ", precision: 2, :separator => ",", :delimiter => ".") %></p>
-          <p><strong>Descrição: </strong><%= power_generator.description %></p>
+  
+  
+  <div id="session_power_generators" class="container" >
+    <div id="box_power_generators">
+      <% @power_generators.each do |power_generator| %>
+        <div class="box card power_generator-card">
+          <%= image_tag power_generator.image_url, class: 'power_generator-card__img' %>
+          <div class="power_generator-card__body">
+            <h2><%= power_generator.name.upcase %></h2>
+            <p class="power_generator-card__price"><%= number_to_currency(power_generator.price, unit: "R$ ", precision: 2, :separator => ",", :delimiter => ".") %></p>
+            <p><strong>Descrição: </strong><%= power_generator.description %></p>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
