--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,9 @@ body {
 }
 
 .box {
-  padding: 10px;
+  padding: 20px;
+  margin-bottom: 10px;
+  min-height: 25ex;
 }
 
 h2 {
@@ -104,13 +106,24 @@ p.power_generator-card__price {
 }
 
 .simple-form__btn {
-  margin-left: -60px;
+  float: left;
+  margin-left: 0px;
 }
 
 .advanced-form {
   margin-top: 22px;
   margin-bottom: 20px;
   margin-left: 100px;
+}
+
+.advanced-form__input {
+  float: left;
+}
+
+.form-btn {
+  float: right;
+  margin-top: 20px;
+  margin-left: 10px;
 }
 
 .power_generators-list {
