--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,10 +134,11 @@ p.power_generator-card__price {
 
 .power_generator-card {
   height: 200px;
-  width: 720px;
+  width: 920px;
   display: flex;
   flex-direction: row;
   margin-left: -60px;
+  margin-bottom: 7ex;
 }
 
 .power_generator-card__img {
@@ -151,7 +152,19 @@ p.power_generator-card__price {
   margin-right: 130px;
 }
 
+.power_generator-card__bottom {
+  margin-left: 26px;
+  margin-right: 130px;
+}
+
 .power_generator-card__button {
   color: #e96443;
 }
 
+.box-calc-freight {
+  width: 100%;
+}
+
+#uf{
+  width: 20px;
+}
