--- a/app/views/power_generators/index.html.erb
+++ b/app/views/power_generators/index.html.erb
@@ -49,23 +49,48 @@
       <% end %>
      <!-- Entradas do usuário para pesquisar uma coleção de geradores de energia com base nas recomendações fornecidas e melhor custo de frete. -->
     </div>
-      
-    
   </div>
-  
   
   <div id="session_power_generators" class="container" >
     <div id="box_power_generators">
       <% @power_generators.each do |power_generator| %>
         <div class="box card power_generator-card">
-          <%= image_tag power_generator.image_url, class: 'power_generator-card__img' %>
+          <%= image_tag power_generator.image_url, width: '220px', height: '220px', class: 'power_generator-card__img' %>
           <div class="power_generator-card__body">
             <h2><%= power_generator.name.upcase %></h2>
             <p class="power_generator-card__price"><%= number_to_currency(power_generator.price, unit: "R$ ", precision: 2, :separator => ",", :delimiter => ".") %></p>
             <p><strong>Descrição: </strong><%= power_generator.description %></p>
+            <div class="power_generator-card__footer">
+              <div class="freight-btn">
+                Calcular Frete>>
+              </div>
+              <div id="box_freight" class="box-calc-freight" style="display: none;">
+                <%= form_tag calc_freight_path, method: :post, remote: true do %>
+                  <%= label_tag "CEP" %>
+                  <%= hidden_field_tag :weight, power_generator.weight %>
+                  <%= text_field_tag :cep, "", id: 'cep' %>
+                  <%= hidden_field_tag :uf, "", id: 'uf' %>
+                  <%= text_field_tag :city, "", id: 'city', disabled: true %>
+                  <%= button_to 'Calcular', nil %>
+                <% end %>
+                <div id="freight_price">
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       <% end %>
     </div>
   </div>
 </div>
+
+
+<script>
+  $("#cep").blur(function() {
+    var cep = $(this).val()
+    $.getJSON("http://viacep.com.br/ws/"+cep+"/json/?callback=?", function(dados) {
+      $("#uf").val(dados.uf);
+      $("#city").val(dados.localidade);
+    });
+  })
+</script>
